--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fontsource/roboto": "^4.5.8",
     "@highcharts/map-collection": "^2.0.1",
     "@mui/material": "^5.10.6",
+    "@mui/styles": "^5.10.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
